<resources>
    <string name="app_name">Motti</string>
    <string name="login">Login</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="click_to_register">Click to register</string>
    <string name="logout">Logout</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click to login</string>
    <string name="repeat_password">repeat password</string>
    <string name="enter_password">Enter password</string>
    <string name="password_not_equals">Password not equals</string>
    <string name="enter_email">Enter email</string>
    <string name="surnames_is_empty">Surnames is empty</string>
    <string name="names_is_empty">Names is empty</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="account_created">Account created.</string>
    <string name="driver">Driver</string>
    <string name="passenger">Passenger</string>
    <string name="user_register_in_database">User register in database</string>
    <string name="user_not_register_in_database">User not register in database</string>
    <string name="cerrar_sesion">Cerrar sesion</string>
</resources>